--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -58,6 +58,7 @@
             android:layout_margin="10dp">
 
             <RelativeLayout
+                android:id="@+id/dragRelativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
