--- a/app/src/main/res/layout/seventh_question.xml
+++ b/app/src/main/res/layout/seventh_question.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -49,6 +49,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/drag_Screen"
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_margin="2dp"
         android:layout_height="400dp">
 
@@ -111,8 +112,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="vertical"
-        android:paddingStart="100dp"
-        android:paddingEnd="100dp">
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
         <Button
             android:id="@+id/next_Btn"
@@ -125,9 +126,7 @@
             android:hint="@string/button_next"
             android:padding="10dp"
             android:textColorHint="@color/white"
-            android:textSize="16sp"
-            app:backgroundTint="@color/midnighit_blue" />
-
+            android:textSize="16sp" />
     </LinearLayout>
 
 
