--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -121,9 +121,13 @@
     </fragment>
     <fragment
         android:id="@+id/tenthQuestion"
-        android:name="com.example.minimental.fragments.TenthQuestion"
+        android:name="com.example.minimental.fragments.TenthFragment"
         android:label="TenthQuestion"
-        tools:layout="@layout/tenth_question"/>
+        tools:layout="@layout/tenth_question">
+        <action
+            android:id="@+id/action_tenthQuestion_to_login_fragment"
+            app:destination="@id/login_fragment" />
+    </fragment>
     <fragment
         android:id="@+id/informationFragment"
         android:name="com.example.minimental.fragments.InformationFragment"
