--- a/app/src/main/res/layout/ninth_question.xml
+++ b/app/src/main/res/layout/ninth_question.xml
@@ -75,7 +75,7 @@
                     app:counterEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/input_nameET"
+                        android:id="@+id/input_SentenceET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLength="21"
