--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -54,7 +54,7 @@
                     android:layout_centerHorizontal="false"
                     android:layout_marginEnd="30dp"
                     android:layout_marginTop="5dp"
-                    android:text="please copy the picture"
+                    android:text="@string/textView_tenth"
                     android:textSize="25sp" />
 
                 <ImageView
