--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -39,6 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="false"
+                    android:layout_alignParentEnd="true"
                     android:layout_gravity="center"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="0dp"
@@ -50,8 +51,7 @@
                     android:id="@+id/tenth_question_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerHorizontal="false"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="30dp"
                     android:text="@string/textView_tenth"
