--- a/app/src/main/res/layout/ninth_question.xml
+++ b/app/src/main/res/layout/ninth_question.xml
@@ -127,6 +127,7 @@
                     android:layout_margin="10dp"
                     android:background="@drawable/round_border"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:hint="@string/Button_finish_answer_text"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
