--- a/app/src/main/res/layout/fourth_question.xml
+++ b/app/src/main/res/layout/fourth_question.xml
@@ -151,7 +151,7 @@
                     android:layout_margin="10dp"
                     android:background="@drawable/round_border"
                     android:gravity="center"
-                    android:hint="Confirm Word"
+                    android:hint="@string/confirm_word"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
                     android:textSize="16sp" />
