--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -50,12 +50,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="@+id/imageView2"
             android:text="@string/title_name"
             android:textColor="@color/white"
-            android:textSize="34sp"
+            android:textSize="40sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
+            app:layout_constraintHorizontal_bias="0.21"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -197,6 +199,24 @@
                 style="@style/Widget.AppCompat.ProgressBar"
                 android:visibility="gone"/>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+                <ProgressBar
+                    android:id="@+id/logos_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.AppCompat.ProgressBar"
+                    android:visibility="gone"/>
+            </LinearLayout>
+
+
+
         </LinearLayout>
     </ScrollView>
 
